--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "ci": "egg-bin pkgfiles --check && npm run lint && npm run cov",
     "pkgfiles": "egg-bin pkgfiles",
     "autod": "autod",
-    "publish": "git commit ./  -m publish && git push && npm publish"
+    "upload": "git commit ./  -m publish && git push && npm publish"
   },
   "files": [
     "lib",
